myteo/test/analyze/main_function/missing_main.exp
Error: No main function found in modules
test/analyze/main_function/missing_main.myte:4:0
 4 | 
   | ^